--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/api": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
